# g2-sentiment-analysis

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy.yml
app/api/routes/: predictor.py
app/api/schemas/: prediction.py
app/core/: config.py
app/models/: prediction.py
ml/model/examples/: example.json
tests/: test_prediction.py  test_predictor.py
