[tool.poetry]
package-mode = false
name = "sentiment-analysis"
version = "0.1.0"
description = "A short description of the project"
authors = ["Groupe 2 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.11"
uvicorn = "0.23.2"
pydantic = "2.4.2"
requests = "^2.31.0"
loguru = "0.7.2"
joblib = "1.3.2"
scikit-learn = "1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"
black = {version = "24.3.0", allow-prereleases = true}
autopep8 = "2.0.4"
ipdb = "0.13.13"
pylint = "3.0.1"

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''
